--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@
 # ===============================
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://localhost:1456;databaseName=ETutor
-#spring.datasource.username=sa
-#spring.datasource.password=11031998
-
-spring.datasource.url=jdbc:sqlserver://45.119.83.107:1433;databaseName=ETutor
+spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=ETutor
 spring.datasource.username=sa
-spring.datasource.password=sa@123456
+spring.datasource.password=123456
+
+# spring.datasource.url=jdbc:sqlserver://45.119.83.107:1433;databaseName=ETutor
+# spring.datasource.username=sa
+# spring.datasource.password=sa@123456
 spring.jpa.open-in-view= true
 # ===============================
 # JPA / HIBERNATE
