--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.open-in-view= true
 # ===============================
 
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-bean-definition-overriding=true
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
